# img2pass

./: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh
include/: img2pass.h
src/: config.c  crypto.c  directory.c  main.c  password.c  ui.c  utils.c
